# redox-layout-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  SCRIPTS.md  fix-redox-input-perms.sh  redox-layout-viewer  run-redox-layout.sh
src/: app.rs  bind.rs  hid.rs  icons.rs  imgrender.rs  keycode.rs  layout.rs  main.rs  render.rs  snapshot.rs  types.rs
