[package]
name = "redox-layout-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
eframe = { version = "0.29", default-features = true, features = ["default_fonts"] }
egui = "0.29"
evdev = "0.13"
hidapi = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xz2 = "0.1"
